tab focus visible on buttons. fixed tabbing bug when accordions closed

--- a/public/quiz-create/css/sass/_add-questions.scss
+++ b/public/quiz-create/css/sass/_add-questions.scss
@@ -243,6 +243,7 @@
         @include _(btn--icon);
         padding-top: 1rem;
         padding-bottom: 1rem;
+        margin-top: 1.6rem;
         margin-bottom: 2rem;
 
         .enp-add-question__icon {
