--- a/public/quiz-create/css/sass/_animations.scss
+++ b/public/quiz-create/css/sass/_animations.scss
@@ -36,15 +36,6 @@
     }
 }
 
-@keyframes visibilityHidden {
-    0% {
-        visibility: visible;
-    }
-    100% {
-        visibility: hidden;
-    }
-}
-
 @keyframes removeAnswers {
     0% {
         opacity: 1;
