--- a/public/quiz-create/css/sass/_typography.scss
+++ b/public/quiz-create/css/sass/_typography.scss
@@ -137,6 +137,12 @@ body #enp-quiz {
         }
     }
 
+    button {
+        &:focus {
+            @include _(focus--glow);
+        }
+    }
+
     .enp-btn {
         @include _(btn);
     }
@@ -197,6 +203,10 @@ body #enp-quiz {
         color: #fff;
         box-shadow: inset 0 2px 0 rgba(0,0,0,.1);
         background: lighten($blue, 20);
+    }
+
+    &:focus {
+        @include _(focus--glow);
     }
 }
 
